--- a/index.html
+++ b/index.html
@@ -16,6 +16,33 @@
 </head>
 <body class="bg-gray-50">
   
+  <!-- Modal de Autenticação -->
+  <div id="auth-modal" class="fixed inset-0 bg-gray-900 bg-opacity-75 flex items-center justify-center z-50 hidden">
+    <div class="bg-white rounded-lg shadow-xl p-8 max-w-md w-full mx-4">
+      <div class="text-center">
+        <svg class="w-20 h-20 text-blue-500 mx-auto mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z"></path>
+        </svg>
+        <h2 class="text-2xl font-bold text-gray-900 mb-2">Acesso Restrito</h2>
+        <p class="text-gray-600 mb-4" id="auth-error-message">Usuário não autenticado</p>
+        <div class="bg-blue-50 border border-blue-200 rounded-lg p-4 mb-6 text-left text-sm text-gray-700">
+          <p class="font-semibold mb-2">Para acessar o sistema:</p>
+          <ol class="list-decimal list-inside space-y-1">
+            <li>Faça logout de todas as contas Google</li>
+            <li>Faça login com sua conta autorizada</li>
+            <li>Clique no botão abaixo para acessar a API</li>
+          </ol>
+        </div>
+        <button onclick="openApiInNewTab()" class="w-full bg-blue-600 hover:bg-blue-700 text-white font-semibold py-3 px-6 rounded-lg transition mb-3">
+          Fazer Login na API
+        </button>
+        <button onclick="retryAuth()" class="w-full bg-gray-200 hover:bg-gray-300 text-gray-700 font-semibold py-2 px-6 rounded-lg transition">
+          Tentar Novamente
+        </button>
+      </div>
+    </div>
+  </div>
+  
   <!-- Header -->
   <header class="bg-blue-600 text-white shadow-md">
     <div class="container mx-auto px-4 py-4">
