Adicionar ID ao campo plano

--- a/index.html
+++ b/index.html
@@ -993,6 +993,7 @@ Gestante de risco habitual</textarea>
           <div class="border-t pt-4">
             <h3 class="font-semibold text-gray-900 mb-3 text-lg">📋 P. (Plano/Condutas)</h3>
             <textarea 
+              id="plano"
               name="plano" 
               rows="4"
               placeholder="Ex: -Oriento sinais de trabalho de parto e sinais de alarme materno-fetais&#10;-Oriento procurar maternidade de referência em caso de início de TP, perda de líquido ou redução de movimentos fetais&#10;-Programo retorno semanal ou antes se intercorrências (agenda recesso 02/01/2026 às 9h)"
