--- a/index.html
+++ b/index.html
@@ -793,6 +793,14 @@
             </div>
           </div>
 
+          <!-- Pendências e Exames Realizados -->
+          <div class="border-t pt-4">
+            <h3 class="font-semibold text-gray-900 mb-3">📋 Exames e Procedimentos Realizados Nesta Consulta</h3>
+            <div id="pendencias-interativas" class="space-y-3">
+              <!-- Preenchido via JS -->
+            </div>
+          </div>
+
           <!-- S - SUBJETIVO (checkboxes) -->
           <div class="border-t pt-4">
             <h3 class="font-semibold text-gray-900 mb-3 text-lg">📝 S. (Subjetivo)</h3>
